--- a/index.html
+++ b/index.html
@@ -444,7 +444,91 @@
             </li>
           </ul>
         </div>
+        <form class="form" name="subscribe-form">
+          <label class="form-label" name="subscribe" for="email-foot"
+            >Subscribe
+            <input
+              class="foot-input"
+              type="email"
+              placeholder="E-mail"
+              id="email-foot"
+            />
+          </label>
+          <button type="submit" class="foot-btn">
+            Subscribe
+            <svg class="social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="close-btn">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form" name="review" autocomplete="on" novalidate>
+          <div class="modal-form-field">
+            <label for="name" class="modal-form-label">Name</label>
+            <div class="modal-form-wrapper">
+              <input class="modal-input" id="name" type="text" name="name" />
+              <svg class="modal-form-icon" width="12" height="12">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label for="phone" class="modal-form-label">Phone</label>
+            <div class="modal-form-wrapper">
+              <input class="modal-input" id="phone" type="tel" name="phone" />
+              <svg class="modal-form-icon" width="13" height="13">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label for="email" class="modal-form-label">Email</label>
+            <div class="modal-form-wrapper">
+              <input class="modal-input" id="email" type="email" name="email" />
+              <svg class="modal-form-icon" width="15" height="12">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label for="comment" class="modal-form-label">Comment</label>
+            <textarea
+              class="modal-area"
+              id="comment"
+              name="comment"
+              placeholder="Text input"
+              rows="8"
+            ></textarea>
+          </div>
+
+          <input
+            class="modal-input-check"
+            id="check"
+            type="checkbox"
+            name="privacy"
+          />
+          <label for="check" class="modal-form-label"
+            >I accept the terms and conditions of the Privacy Policy</label
+          >
+
+          <button type="submit" class="btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
