--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <label for="name" class="modal-form-label">Name</label>
             <div class="modal-form-wrapper">
               <input class="modal-input" id="name" type="text" name="name" />
-              <svg class="modal-form-icon" width="12" height="12">
+              <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -489,7 +489,7 @@
             <label for="phone" class="modal-form-label">Phone</label>
             <div class="modal-form-wrapper">
               <input class="modal-input" id="phone" type="tel" name="phone" />
-              <svg class="modal-form-icon" width="13" height="13">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -499,7 +499,7 @@
             <label for="email" class="modal-form-label">Email</label>
             <div class="modal-form-wrapper">
               <input class="modal-input" id="email" type="email" name="email" />
-              <svg class="modal-form-icon" width="15" height="12">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -516,17 +516,29 @@
             ></textarea>
           </div>
 
-          <input
-            class="modal-input-check"
-            id="check"
-            type="checkbox"
-            name="privacy"
-          />
-          <label for="check" class="modal-form-label"
-            >I accept the terms and conditions of the Privacy Policy</label
-          >
+          <div class="form-agreement">
+            <input
+              class="modal-input-check title-benefits"
+              id="check"
+              type="checkbox"
+              name="privacy"
+              value="true"
+              checked
+            />
+            <label for="check" class="user-agreement">
+              <span class="check-agreement">
+                <svg class="check-agreement-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="./index.html" target="_blank" class="accent-text"
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
 
-          <button type="submit" class="btn">Send</button>
+          <button type="submit" class="btn send">Send</button>
         </form>
       </div>
     </div>
