--- a/index.html
+++ b/index.html
@@ -444,23 +444,25 @@
             </li>
           </ul>
         </div>
-        <form class="form" name="subscribe-form">
-          <label class="form-label" name="subscribe" for="email-foot"
-            >Subscribe
-            <input
-              class="foot-input"
-              type="email"
-              placeholder="E-mail"
-              id="email-foot"
-            />
-          </label>
-          <button type="submit" class="foot-btn">
-            Subscribe
-            <svg class="social-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-frame"></use>
-            </svg>
-          </button>
-        </form>
+        <div>
+          <form class="form" name="subscribe-form">
+            <label class="form-label" for="email-foot"
+              >Subscribe
+              <input
+                class="foot-input"
+                type="email"
+                placeholder="E-mail"
+                id="email-foot"
+              />
+            </label>
+            <button type="submit" class="foot-btn">
+              Subscribe
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -476,10 +478,15 @@
         </p>
         <form class="modal-form" name="review" autocomplete="on" novalidate>
           <div class="modal-form-field">
-            <label for="name" class="modal-form-label">Name</label>
+            <label for="user-name" class="modal-form-label">Name</label>
             <div class="modal-form-wrapper">
-              <input class="modal-input" id="name" type="text" name="name" />
-              <svg class="modal-form-icon" width="18" height="18">
+              <input
+                class="modal-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -506,11 +513,11 @@
           </div>
 
           <div class="modal-form-field">
-            <label for="comment" class="modal-form-label">Comment</label>
+            <label for="user-comment" class="modal-form-label">Comment</label>
             <textarea
               class="modal-area"
-              id="comment"
-              name="comment"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
               rows="8"
             ></textarea>
@@ -518,14 +525,14 @@
 
           <div class="form-agreement">
             <input
-              class="modal-input-check title-benefits"
-              id="check"
+              class="modal-input-check visually-hidden"
+              id="user-privacy"
               type="checkbox"
-              name="privacy"
+              name="user-privacy"
               value="true"
               checked
             />
-            <label for="check" class="user-agreement">
+            <label for="user-privacy" class="user-agreement">
               <span class="check-agreement">
                 <svg class="check-agreement-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
