--- a/index.html
+++ b/index.html
@@ -444,20 +444,21 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="subscribe">
+          <p class="subscribe-p">Subscribe</p>
           <form class="form" name="subscribe-form">
-            <label class="form-label" for="email-foot"
-              >Subscribe
+            <label class="form-label" for="email-foot">
               <input
                 class="foot-input"
                 type="email"
                 placeholder="E-mail"
                 id="email-foot"
+                name="email"
               />
             </label>
             <button type="submit" class="foot-btn">
               Subscribe
-              <svg class="social-icon" width="24" height="24">
+              <svg class="social-icon sub" width="24" height="24">
                 <use href="./images/icons.svg#icon-frame"></use>
               </svg>
             </button>
@@ -477,7 +478,7 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form" name="review" autocomplete="on" novalidate>
-          <div class="modal-form-field">
+          <div class="modal-form-field name">
             <label for="user-name" class="modal-form-label">Name</label>
             <div class="modal-form-wrapper">
               <input
