--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form" name="review" autocomplete="on" novalidate>
-          <div class="modal-form-field name">
+          <div class="modal-form-field">
             <label for="user-name" class="modal-form-label">Name</label>
             <div class="modal-form-wrapper">
               <input
@@ -513,7 +513,7 @@
             </div>
           </div>
 
-          <div class="modal-form-field">
+          <div class="modal-form-field-comment">
             <label for="user-comment" class="modal-form-label">Comment</label>
             <textarea
               class="modal-area"
