--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <section class="page-benefits">
         <div class="container benefits">
-          <h2 class="title-benefits">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-li">
               <div class="container benefits-icon">
